fix(Auth) doc
