# src/auth/auth.controller.ts
@@ -2,8 +2,11 @@ import { Body, Controller, Post } from "@nestjs/common";
 import { AuthService } from "./auth.service";
 
 import { Throttle } from "@nestjs/throttler";
-import { RequestResetPasswordDto, ResetPassworResponseDto } from "./dto/request-reset-password.dto";
-import { ResetPasswordDto } from "./dto/reset-password.dto";
+import {
+  RequestResetPasswordDto,
+  RequestResetPassworResponseDto,
+} from "./dto/request-reset-password.dto";
+import { ResetPasswordDto, ResetPassworResponseDto } from "./dto/reset-password.dto";
 import { loginDto, loginResponseDto } from "./dto/login.dto";
 import { ApiBody, ApiOkResponse, ApiOperation } from "@nestjs/swagger";
 import { ApiErrors } from "../swagger/errors";
@@ -25,14 +28,17 @@ export class AuthController {
   @Post('request-reset-password')
   @ApiOperation({ summary: "User request reset password" })
   @Throttle({ default: { limit: 3, ttl: 60000 } }) // 3 demandes par minute pour éviter le spam
-  @ApiOkResponse({ type: ResetPassworResponseDto})
+  @ApiOkResponse({ type: RequestResetPassworResponseDto })
   @ApiErrors('UNAUTHORIZED')
   async requestPasswordReset(@Body() requestResetPasswordDto: RequestResetPasswordDto) {
     return this.authService.requestPasswordReset(requestResetPasswordDto);
   }
 
   @Post('reset-password')
-  @ApiOperation({ summary: "User reset password" })
+  @ApiOperation({ summary: "User reset password" }) 
+  @ApiBody({ type: ResetPasswordDto })
+  @ApiOkResponse({ type: ResetPassworResponseDto })
+  @ApiErrors('BAD_REQUEST')
   @Throttle({ default: { limit: 5, ttl: 60000 } }) // 5 tentatives par minute
   async resetPassword(@Body() resetPasswordDto: ResetPasswordDto) {
     return this.authService.resetPassword(resetPasswordDto);
